--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,9 +10,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Check out
+      uses: actions/checkout@v3
       with:
-          fetch-depth: 2
+        fetch-depth: 2
     - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
