--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Check out
-      uses: actions/checkout@v3
+      uses: actions/checkout@master
       with:
-        fetch-depth: 2
+          fetch-depth: 2
     - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
