--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Check out
       uses: actions/checkout@v3
+      with:
+          fetch-depth: 2
     - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
@@ -19,11 +21,10 @@ jobs:
         python-version: '3.9'
         # Optional - x64 or x86 architecture, defaults to x64
         architecture: 'x64'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tensorflow
-          pip install tensorflow_hub
+    - name: Install dependencies
+      run: |
+        pip install tensorflow
+        pip install tensorflow_hub
     # You can test your matrix by printing the current Python version
     - name: Display Python version
       run: python -c "import sys; print(sys.version)"
