--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,6 +25,8 @@ jobs:
       run: |
         pip install tensorflow
         pip install tensorflow_hub
+        pip install requests_toolbelt
+        pip install Pillow
     # You can test your matrix by printing the current Python version
     - name: Display Python version
       run: python -c "import sys; print(sys.version)"
