--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,3 +32,5 @@ jobs:
       run: python -c "import sys; print(sys.version)"
     - name: RUN VGG
       run: python src/vgg.py
+    - name: SEND MESSAGE
+      run: python src/webex.py token=${{ secrets.AI_ROBOT }}
